# rpi_wifi_setup

./: .gitignore  LICENSE.txt  README.md  build.sh  create_poetry_env.sh  deploy.sh  install.py  pyproject.toml  run.sh
src/rpi_wifi_setup/: rpi_wifi_setup.py
src/rpi_wifi_setup/assets/: README.txt
src/rpi_wifi_setup/assets/armv7/: wifi-connect
src/rpi_wifi_setup/assets/i686/: wifi-connect
src/rpi_wifi_setup/assets/ui/: asset-manifest.json  index.html
src/rpi_wifi_setup/assets/x86_64/: wifi-connect
